@startuml "clasesDiseñoUnity"

' Cosas bonitas
skinparam linetype ortho
' skinparam class {
'     BackgroundColor #7ACFF5
' }
hide circle
skinparam classAttributeIconSize 0
skinparam roundCorner 0
left to right direction

''' El frontend (react)
package "React" %lighten("#PaleGreen", 15) { }

''' El juego
package "Unity" #LightYellow {
    class "GameController" #BUSINESS {
        - static singleton: GameController
        - JSConnector: JSConnector
        - rinlBody: RINLBody
        - activityData: dict
        - calibrationData: dict

        + GetJSConnector() : JSConnector
        + GetRINLBody() : RINLBody
        + GetCalibrationData() : dict
        + Pause() : None
        + Resume() : None
        + ChangeScene(sceneName: str) : None
        + SetActivityData(minigame: str, duration: int, score: int, extra_data: str) : None
        + GetActivityData() : dict
        + SendActivityData() : None
    }
    note right of "GameController"
        El GameController es la clase principal del juego. Se encarga de gestionar
        el estado del juego, las escenas y la comunicación con el frontend a través
        del JSConnector.
    end note

    class "RINLBody" #BUSINESS {
        - activityPoints : int

        + GetActivityPoints() : int
        + ResetActivityPoints() : None
    }
    note right of "RINLBody"
        RINLBody es la clase que se encarga de representar el cuerpo del usuario
        a partir de las posturas que el JSConector recibe del frontend.
    end note

    class "SceneScript" #BUSINESS {
        + static instance: SceneScript
        + objects: list[GameObject]
        + animator: Animator

        + GetObject(name: str) : GameObject | None
        + SwitchScene(sceneName: str) : None
    }
    note right of "SceneScript"
        El SceneScript es una clase que se encarga de gestionar los objetos
        de la escena y cambiar entre escenas. Se utiliza para cargar objetos,
        animaciones y llevar el hilo conductor del juego.
    end note

    class "JSConnector" #BUSINESS {
        - latestLandmarks: list[Landmark]
        - imageSize: Vector2

        - SendToReact(type: str, payload: str) : None
        - SendAck(functionName: str)
        + GetImageSize() : Vector2
        + GetLatestLandmarks() : list[Landmark]
        + SetBodyPosotion(landmarks: str) : None
        + SetVideoSize(sizeString: str) : None
        + SetCurrentShape(shapeString: str) : None
        + SetCurrentUser(userString: str) : None
        + CreateActivity(activity: dict) : None
    }
    note right of "JSConnector"
        El JSConnector es una clase que se encarga de enviar y recibir mensajes
        entre el juego y el frontend. Se utiliza tanto para recibir las posturas
        en el frontend como para enviar los datos de las actividades realizadas
        en el juego.
    end note

    package "BallonGame" #BUSINESS {}
    package "DodgeGame" #BUSINESS {}

    ' Relaciones entre clases del juego
    GameController -> JSConnector : uses >
    RINLBody ..> JSConnector : uses >
    RINLBody ..> GameController : uses >
    SceneScript ..> GameController : uses >

    ' Relaciones entre los paquetes de juego
    SceneScript .> BallonGame : manages >
    SceneScript .> DodgeGame : manages >
}

'' Relaciones entre el juego y el frontend
JSConnector <..up.> React : uses (A través de eventos de JavaScript)

@enduml
